# rofi-qalc

./: .gitignore  Makefile.am  README.md  configure.ac
m4/: ax_cxx_compile_stdcxx_11.m4
src/: qalc.cpp
